--- a/src/app/pessoas-juridicas/pessoas-juridicas.component.html
+++ b/src/app/pessoas-juridicas/pessoas-juridicas.component.html
@@ -11,15 +11,20 @@
   [dataSource]="dxDataGridProperties.dataSource!"
   [height]="'100%'"
   [rowAlternationEnabled]="true"
-  [showBorders]="true"
+  [showBorders]="false"
   [showColumnHeaders]="true"
-  [showRowLines]="true"
+  [showRowLines]="false"
   [width]="'100%'"
 >
   <dxo-column-chooser [enabled]="true"></dxo-column-chooser>
   <dxo-filter-panel [visible]="true"></dxo-filter-panel>
   <dxo-filter-row [visible]="true"></dxo-filter-row>
-  <dxo-editing [allowAdding]="true" [allowDeleting]="true" [allowUpdating]="true" [mode]="'popup'">
+  <dxo-editing
+    [allowAdding]="true"
+    [allowDeleting]="true"
+    [allowUpdating]="true"
+    [mode]="'popup'"
+  >
     <dxo-form [colCount]="1" [showValidationSummary]="true"></dxo-form>
     <dxo-popup
       [hideOnOutsideClick]="true"
@@ -39,7 +44,10 @@
     [visible]="true"
   ></dxo-pager>
   <dxo-paging [enabled]="true" [pageSize]="20"></dxo-paging>
-  <dxo-selection [mode]="'multiple'" [selectAllMode]="'allPages'"></dxo-selection>
+  <dxo-selection
+    [mode]="'multiple'"
+    [selectAllMode]="'allPages'"
+  ></dxo-selection>
   <dxo-scrolling [useNative]="true"></dxo-scrolling>
   <dxo-search-panel
     [highlightCaseSensitive]="false"
