fix: pessoas juridicas sem borda na grid

--- a/src/app/pessoas-juridicas/pessoas-juridicas.component.html
+++ b/src/app/pessoas-juridicas/pessoas-juridicas.component.html
@@ -11,9 +11,9 @@
   [dataSource]="dxDataGridProperties.dataSource!"
   [height]="'100%'"
   [rowAlternationEnabled]="true"
-  [showBorders]="false"
+  [showBorders]="true"
   [showColumnHeaders]="true"
-  [showRowLines]="false"
+  [showRowLines]="true"
   [width]="'100%'"
 >
   <dxo-column-chooser [enabled]="true"></dxo-column-chooser>
