--- a/src/app/pessoas-juridicas/pessoas-juridicas.component.html
+++ b/src/app/pessoas-juridicas/pessoas-juridicas.component.html
@@ -1,3 +1,7 @@
+<div class="titulo">
+  <span>{{ icone }}</span>
+  <span>{{ titulo }}</span>
+</div>
 <dx-data-grid
   (onEditingStart)="onEditingStart($event)"
   (onEditorPreparing)="onEditorPreparing($event)"
