--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -47,6 +47,7 @@
           display: flex;
           justify-content: space-between;
           text-decoration: none;
+          gap: 8px;
         }
 
         > a + a {
