--- a/src/app/pessoas-juridicas/pessoas-juridicas.component.scss
+++ b/src/app/pessoas-juridicas/pessoas-juridicas.component.scss
@@ -1,4 +1,11 @@
 :host {
   height: 100%;
   display: flex;
+  flex-direction: column;
+
+  > div.titulo {
+    font-size: x-large;
+    display: flex;
+    gap: 8px;
+  }
 }
